[tool.poetry]
name = "vllm-proxy"
version = "0.2.1"
description = ""
authors = ["Shawn TIAN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
web3 = "^7.6.0"
eth-account = "^0.13.4"
eth-utils = "^5.1.0"
cachetools = "^5.5.0"
dstack-sdk = "^0.1.5"
cryptography = "^43.0.1"
redis = "^5.2.1"
nv-local-gpu-verifier = "^2.3.0"
nv-attestation-sdk = "^2.3.0"
motor = "^3.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.8"
respx = "^0.22.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
